Manually revert CB-7306.
* Remove code that added dfs_replication to hdfs service configs
* Add `dfs_replication` values to templates:
  * 7.2.0
  * 7.2.1
  * 7.2.2
  * 7.2.6
  * 7.2.7
  * 7.2.7 HA
  * 7.2.8
  * 7.2.8 HA

Remove dead imports.

Trailing comma, which is not valid JSON.